// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> shapshots should render closed 1`] = `
<div
  className=""
>
  <div
    className="overlay"
    onClick={[Function]}
  />
  <div
    className="drawer "
  >
    <div
      className="closeDrawer"
      onClick={[Function]}
    >
      <i
        className="mdi mdi-chevron-down"
      />
    </div>
    <div
      className="content"
    >
      This should show up
    </div>
  </div>
</div>
`;

exports[`<Drawer /> shapshots should render open 1`] = `
<div
  className="drawerOpen"
>
  <div
    className="overlay"
    onClick={[Function]}
  />
  <div
    className="drawer "
  >
    <div
      className="closeDrawer"
      onClick={[Function]}
    >
      <i
        className="mdi mdi-chevron-down"
      />
    </div>
    <div
      className="content"
    >
      This should show up
    </div>
  </div>
</div>
`;
